🐛 Fix overflow on too many markers

--- a/src/app/components/MarkerDetails/MarkerDetails.module.css
+++ b/src/app/components/MarkerDetails/MarkerDetails.module.css
@@ -37,6 +37,7 @@
 .main {
   display: grid;
   grid-template-rows: 1fr auto;
+  overflow: hidden;
 }
 
 .comments {
